--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ p {
 .btn-style {
   margin: 1%;
   padding: 1.5%;
-  color: #fff;
+  color: #D4686E;
   background-color: #FE424D;
   border: none;
   border-radius: 5px;
