--- a/style.css
+++ b/style.css
@@ -6,14 +6,14 @@
 
 body {
   text-align: center;
-  background-color: #2F5196;
+  background-color: #DAECF3;
 }
 
 .roboto {
   font-family: 'Roboto', sans-serif;
   font-weight: 500;
   font-size: 1.4rem;
-  color: #FFFFF;
+  color: #022D41;
 }
 
 .d-flex {
@@ -43,7 +43,7 @@ body {
 .title-font {
   font-family:'Patua One', cursive;
   font-weight: 400;
-  color: #FFFFF;
+  color: #0d0c0c;
 }
 
 h1 {
@@ -76,7 +76,7 @@ p {
   margin: 1%;
   padding: 1.5%;
   color: #fff;
-  background-color: rgb(129 129 129);
+  background-color: #FE424D;
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -84,14 +84,14 @@ p {
 }
 
 .btn-style:hover, .btn-style:focus {
-  background-color: #202020;
+  background-color: #1AA6B7;
   color: #fff;
   outline: none;
   transition: 0.3s;
 }
 
 .btn-style:disabled {
-  background-color: rgb(129 129 129);
+  background-color: rgb(145, 161, 163);
   cursor: no-drop;
 }
 
